chore: add last-updated marker for deploy stamping

--- a/xo-pulse-site/index.html
+++ b/xo-pulse-site/index.html
@@ -64,6 +64,10 @@
     <p style="margin-top:24px">
       <span class="pill">Signed → Visible → Alive</span>
     </p>
+    <p style="margin-top:12px">
+      <span class="pill">Status: Live</span>
+      <span class="pill">Surface: Static</span>
+    </p>
 
     <p style="margin-top:28px">
       <a href="https://xo.center">XO Center →</a><br/>
@@ -72,7 +76,8 @@
     </p>
 
     <footer>
-      Pulse is a surface. The record lives elsewhere.
+      Pulse is a surface. The record lives elsewhere.<br/>
+      <span class="muted">Last updated: 2026-02-10</span>
     </footer>
   </main>
 </body>
